--- a/css/main.css
+++ b/css/main.css
@@ -497,6 +497,7 @@ nav {
 .made-projects-list {
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
   gap: 30px;
   margin-bottom: 60px;
 }
@@ -524,6 +525,7 @@ nav {
 }
 
 .made-projects-list__link {
+  width: 100%;
   position: relative;
   text-decoration: none;
   display: flex;
@@ -543,6 +545,7 @@ nav {
 }
 
 .made-projects-list__section {
+  flex-grow: 1;
   bottom: 0;
   left: 0;
   padding-top: 20px;
@@ -624,18 +627,10 @@ nav {
   }
 }
 
-.features__about {
-  color: var(--common-text-color);
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
 .features__list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: baseline;
   gap: 30px;
 }
 
@@ -678,6 +673,14 @@ nav {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
+.features__about {
+  color: var(--common-text-color);
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
@@ -1141,8 +1144,6 @@ nav {
 }
 
 .modal_mobile {
-  top: 0;
-  left: 0;
   position: relative;
   padding-top: 48px;
   padding-left: 40px;
@@ -1273,12 +1274,12 @@ nav {
 }
 
 .modal {
-  position: absolute;
-  padding: 40px;
-  top: 50%;
+  position: fixed;
+  top: 45%;
   left: 50%;
-  width: 450px;
-  height: 609px;
+  width: 315px;
+  padding: 25px;
+  height: 595px;
   background: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1286,6 +1287,14 @@ nav {
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+    padding: 40px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
