--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,42 +1,41 @@
 .features {
     padding-top: 60px;
     padding-bottom: 60px;
-    
-@media screen and (min-width:$desktop) {
-    
-    padding-top:94px;
-    padding-bottom: 94px;
-}
-}
+   
 
-.features__about {
-    color: var(--common-text-color);
-    @include font(normal, 14px, 1.71, 0.03em);
+    @media screen and (min-width:$desktop) {
+
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .features__list {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: baseline;
     gap: 30px;
 }
 
-.features__item {
-    width: 100%;
-    
-@media screen and (min-width:$tablet) {
-    width: calc((100% - 30px) / 2);
-}
 
-@media screen and (min-width:$desktop) {
-    width: calc((100% - 90px) / 4);
-}
+
+.features__item {
+  
+   width: 100%;
+
+    @media screen and (min-width:$tablet) {
+        width: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width:$desktop) {
+        width: calc((100% - 90px) / 4);
+    }
 }
 
 .features__box {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 120px;
     margin-bottom: 30px;
@@ -49,11 +48,14 @@
     height: 70px;
 }
 
-
-
 .features__title {
     margin-bottom: 10px;
     color: var(--title-text-color);
     text-transform: uppercase;
-@include font(700, 14px, 1.14, 0.03em);
+    @include font(700, 14px, 1.14, 0.03em);
+}
+
+.features__about {
+    color: var(--common-text-color);
+    @include font(normal, 14px, 1.71, 0.03em);
 }
