--- a/sass/components/_made-projects.scss
+++ b/sass/components/_made-projects.scss
@@ -1,6 +1,7 @@
 .made-projects-list {
     display: flex;
     flex-wrap: wrap;
+    align-items: stretch;
     gap: 30px;
     margin-bottom: 60px;
 @media screen and (min-width:$desktop) {
@@ -21,7 +22,7 @@
 } 
 
 .made-projects-list__link {
-    
+    width: 100%;
     position: relative;
     text-decoration: none;
     display: flex;
@@ -40,6 +41,7 @@
 
 
 .made-projects-list__section {
+    flex-grow: 1;
     bottom: 0;
     left: 0;
     padding-top: 20px;
