--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -21,13 +21,12 @@
 }
 
 .modal {
-    position: absolute;
-    padding: 40px;
-    top: 50%;
+    position: fixed;
+    top: 45%;
     left: 50%;
-
-    width: 450px;
-    height: 609px;
+    width: 315px;
+    padding: 25px;
+    height: 595px;
 
     background: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -36,6 +35,11 @@
 
     @include animation(transform);
 
+    @media screen and (min-width:$mobile) {
+        width: 450px;
+        height: 609px;
+        padding: 40px;
+    }
   
     @media screen and (min-width:$desktop) {
         width: 528px;
