--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -24,7 +24,7 @@
    
     background: #fff;
     border-radius: 0px 0px 4px 4px;
-@media screen and (min-width:$desktop){
+@media screen and (min-width:$tablet){
         width: calc((100% - 30px) / 2);
     }
 @media screen and (min-width:$desktop){
