--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -19,6 +19,7 @@
 .clients__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
 }
 
@@ -44,11 +45,10 @@
     color: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-
-    @include animation(color);
-    @include animation(border-color);
-   
-    &:hover, &:focus {
+  
+    @include animation(color, border-color);
+     
+    &:hover{
     color: var(--accent-color);
     border-color: var(--accent-color);
       }
