--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,12 +1,9 @@
 .features {
     padding-top: 60px;
     padding-bottom: 60px;
-   
-
-    @media screen and (min-width:$desktop) {
-
-        padding-top: 94px;
-        padding-bottom: 94px;
+@media screen and (min-width:$desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
     }
 }
 
@@ -49,10 +46,17 @@
 }
 
 .features__title {
+
+    text-align: center;
+   
     margin-bottom: 10px;
     color: var(--title-text-color);
     text-transform: uppercase;
     @include font(700, 14px, 1.14, 0.03em);
+
+@media screen and (min-width:$tablet){
+    text-align: start;
+    }
 }
 
 .features__about {
