--- a/sass/components/_menu-buttons.scss
+++ b/sass/components/_menu-buttons.scss
@@ -1,31 +1,31 @@
-/* .portfolio {
-   // padding-top: var(--typical-padding);
-   // padding-bottom: var(--typical-padding);
-} */
+.portfolio {
+   padding-top: 94px;
+   padding-bottom: 94px;
+} 
 
-.portfolio__menu{    
-   padding-top: 60px;
-   padding-bottom: 40px;
-   
+.portfolio__menu {
+    //padding-top: 60px;
+   // padding-bottom: 40px;
+   margin-bottom: 50px;
+
 @media screen and (min-width:$tablet) {
-
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center; 
-    }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 }
 
 .portfolio__item {
-   display: inline-block;
-    
-  }  
+    display: inline-block;
+
+}
 
 
 .portfolio__button {
     margin-right: 8px;
     margin-bottom: 15px;
     padding: 6px 22px 6px 22px;
-   // white-space: nowrap;
+    // white-space: nowrap;
     border-radius: 4px;
     border-color: transparent;
     vertical-align: text-top;
@@ -36,22 +36,18 @@
     cursor: pointer;
 
     @include font(500, 16px, 1.62, 0.03em);
-    @include animation(color);
-    @include animation(background);
-    @include animation(box-shadow);
-
-@media screen and (min-width:$tablet) {
-
-     margin-bottom: 0;
+    @include animation(color, background, box-shadow);
+    @media screen and (min-width:$tablet) {
+        margin-bottom: 0;
     }
-} 
+}
 
 .portfolio__button:focus,
-.portfolio__button:hover{
+.portfolio__button:hover {
     background: var(--accent-color);
     color: #fff;
-    box-shadow: 
-    0px 3px 1px rgba(0, 0, 0, 0.1), 
-    0px 1px 2px rgba(0, 0, 0, 0.08), 
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow:
+        0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
