--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin animation($property) {
+@mixin animation($property...) {
     transition-property: $property;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
