--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ nav {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -341,6 +341,10 @@ nav {
   border: none;
   margin-top: auto;
   margin-bottom: auto;
+  color: currentColor;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav__button:hover, .nav__button:focus {
@@ -439,12 +443,19 @@ nav {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio__menu {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -452,6 +463,13 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__menu {
+    margin-bottom: 50px;
   }
 }
 
@@ -775,13 +793,23 @@ nav {
 
 .team__title {
   display: inline-block;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
-  color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
 }
 
 .team-item__card {
@@ -835,7 +863,8 @@ nav {
   justify-content: center;
   align-items: center;
   color: #afb1b8;
-  transition-property: color;
+  background-color: #fff;
+  transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -862,13 +891,23 @@ nav {
 }
 
 .clients__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+  }
 }
 
 .clients__list {
@@ -1291,8 +1330,8 @@ nav {
 }
 
 .modal {
-  position: fixed;
-  top: 45%;
+  position: absolute;
+  top: 50%;
   left: 50%;
   width: 315px;
   padding: 25px;
