--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,11 +8,14 @@
 }
 
 .clients__title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-align: center;   
     color: var(--title-text-color);
-
-    @include font(700, 36px, 1.16, 0.03em);
+    @include font(700, 28px, 1.17, 0.03em);
+@media screen and (min-width:$desktop){
+    margin-bottom: 50px;
+@include font(700, 36px, 1.16, 0.03em);
+}   
 }
 
 
