--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -21,8 +21,8 @@
 }
 
 .modal {
-    position: fixed;
-    top: 45%;
+    position: absolute;
+    top: 50%;
     left: 50%;
     width: 315px;
     padding: 25px;
