--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,7 @@ nav {
   text-decoration: none;
   color: var(--common-text-color);
   display: flex;
+  align-items: center;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
@@ -467,7 +468,7 @@ nav {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .portfolio__menu {
     margin-bottom: 50px;
   }
@@ -475,10 +476,16 @@ nav {
 
 .portfolio__item {
   display: inline-block;
+  margin-right: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .portfolio__button {
-  margin-right: 8px;
   margin-bottom: 15px;
   padding: 6px 22px 6px 22px;
   border-radius: 4px;
@@ -508,6 +515,18 @@ nav {
   background: var(--accent-color);
   color: #fff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.nav__button {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__button {
+    display: none;
+  }
 }
 
 .made-projects-list {
@@ -1053,6 +1072,12 @@ nav {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .join-us__title {
+    text-align: left;
+  }
 }
 
 .join-us__list {
