--- a/sass/components/_menu-buttons.scss
+++ b/sass/components/_menu-buttons.scss
@@ -16,21 +16,27 @@ padding-top: 60px;
     justify-content: center;
     margin-bottom: 30px;
 }
-    @media screen and (min-width:$tablet){
+    @media screen and (min-width:$desktop){
     margin-bottom: 50px;
     }
 }
 
 .portfolio__item {
     display: inline-block;
+    margin-right: 8px;
+
+@media screen and (min-width:$tablet) {
+    &:last-child{
+        margin-right: 0;
+    }
+    }
 }
 
 
 .portfolio__button {
-    margin-right: 8px;
+
     margin-bottom: 15px;
     padding: 6px 22px 6px 22px;
-    // white-space: nowrap;
     border-radius: 4px;
     border-color: transparent;
     vertical-align: text-top;
@@ -56,3 +62,15 @@ padding-top: 60px;
         0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+
+.nav__button{
+display: flex;
+justify-content: center;
+text-align: center;
+
+@media screen and (min-width:$tablet) {
+       display: none;
+    }
+}
+
